# dyk-tools

./: .gitignore  LICENSE  README  analyze_article.py  app.py  dykbot.bash  dykbot.py  find_approved_templates.py  get_states.py  gitinfo.py  notes.txt  pyproject.toml  requirements.txt  template_form.py  test_nomination.py  webpack.config.js
dyk_tools/: __init__.py  article.py  conftest.py  hook_set.py  nomination.py  test_article.py  test_conftest.py  test_nomination.py  test_version.py  us_states.py  version.py
dyk_tools/bot/: dykbot.bash  dykbot.py
dyk_tools/db/: models.py  notes.txt
dyk_tools/flask_app/: app.py  template_form.py
dyk_tools/scripts/: find_approved_templates.py
dyk_tools/web/: app_config.py  cache.py  core.py  core_forms.py  data.py  html_utils.py
dyk_tools/wiki/: article.py  hook.py  (+3 more)
dyk_web/: api.py  app.py  cache.py  core.py  core_forms.py  data.py  html_utils.py
flask_app/: app.py  template_form.py
js/: dyk_pingifier.js  dyk_pingifier.test.js  dyk_reviewTool.js  dyk_reviewTool.test.js  hook.js  hook.test.js  hookset.js  hookset.test.js  link.js  link.test.js  localUpdateTimes.html  localUpdateTimes.js  localUpdateTimes.test.js  nomination.js  nomination.test.js  try.js
pages/: nomination.py  test_nomination.py  test_patch.py  unittest-test_nomination
templates/: base.html  display.html  home_page.html
tests/: conftest.py  test_version.py
toolforge/: gitinfo.py
wiki/: Category:DYK-Tools-Bot maintenance templates  README  Template:DYK-Tools-Bot was here  Template:Pending DYK American hooks  Template:Pending DYK biographies
(+47 files in other folders)
