[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "dyk_tools"
dynamic = ["version"]
dependencies = [
  "Flask",
  "Flask-Caching",
  "mwoauth",
  "mwparserfromhell",
  "PyMySQL",
  "pytest",
  "pytest-mock",
  "pytest-socket",
  "pywikibot",
  "sh",
  "SQLAlchemy",
  "toml",
  "ujson",
  "WTforms",
]

[project.scripts]
get-states = "dyk_tools.scripts:get_states.main"
analyze-article = "dyk_tools.scripts:analyze_article.main"
find-approved_templates = "dyk_tools.scripts:find_approved_templates.main"
dykbot = "dyk_tools.bot:dykbot.main"

[tool.setuptools]
packages = ["dyk_tools"]

[tool.setuptools_scm]
write_to = "dyk_tools/_version.py"
